# CoronaEffectSeparator

./: CMakeLists.txt
python/: conveyor_Ida.py
source/: ElectricForcesCES.h  ElectricParticleProperty.h  ParserChDistribution.h  ParserChRandomShapeCreator.h  ParserElectricForcesCES.h  ParserEmitter.h  ProcessFlow.h  SimulatorCES.h  converter.cpp  conveyor_Ida.cpp  conveyor_simplified.cpp  input_output.h
